attempt to fix layout issues on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -119,7 +119,6 @@ a {
 
     .wrapper{
       display: inline-block;
-      size: 100%;
       padding-right: auto;
 
 
